frontend/src/App.css
.ruka{
  cursor: pointer;
}
.siroko{
    width:100%;
    background-color: #b681da;
    transition: background-color 0.3s ease;
}
.siroko:hover, .siroko:active {
  background-color: #7d3d9b; 
}
.siroko:clicked {
  background-color: #7d3d9b; /* Ostaje ljubičasta kad je gumb pritisnut */
}
.siroko:focus {
  background-color: #7d3d9b;
}

.logo-centered {
    display: block;
    margin: 0 auto;
}
.naslov{
    font-weight: bold;  
    font-size: 16px;    
    background-color: #E6CCFF; 
    padding: 5px 10px;  
    display: inline-block; /* Omogućava da pozadina prati veličinu teksta */
    border-radius: 5px; /* Zaobljeni rubovi (po želji)*/

}
.logo-navbar {
  width: 200px;
  height: auto;
  cursor: pointer;
  margin-left: 20px;    
  margin-bottom: 10px;  
}

  .dropdown-title {
    
    font-size: 20px;          
    color: #4B0082;           
    cursor: pointer;   
    padding-top: 200px;      
  } 

  .welcome-title {
    
    font-size: 24px;           
    color: #4B0082;            
    text-align: center;        
    
    padding: 20px 0;           
    background-color: #f0e6ff; 
    border-radius: 10px;       
  }

  .custom-right-align {
    margin-left: auto;
}

.sredina{
  
  vertical-align: middle;
  text-align: center; 
  
}

.sirokostatus{
  width:58%;
  background-color: #b681da;
  transition: background-color 0.3s ease;
  
 
}
.sirokostatus:hover, .siroko:active {
background-color: #7d3d9b; 
}
.sirokostatus:clicked {
background-color: #7d3d9b; /* Ostaje ljubičasta kad je gumb pritisnut */
}
.sirokostatus:focus {
background-color: #7d3d9b;
}

.ikona {
  position: relative; /* Potrebno za pozicioniranje tooltip-a u odnosu na ikonu */
  cursor: pointer;
}

.tooltip {
  visibility: hidden;
  position: absolute;
  background-color: #f8f8f8;
  color: #aa13e6;
  text-align: center;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding: 5px;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
  z-index: 1;
  left: 50px; /* Postavlja sliku desno od ikonice */
  transform: translateY(-50%);
  opacity: 1;
  
}

.ikona:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.era {
  display: block;
  margin: 0 auto; 
  border: 1px solid #7d3d9b; 
  box-shadow: 7px 7px 13px #7f7e80;
}

.slika-container {
  text-align: center; 
  
}

h4 {
  font-size: 20px;
  color: #7d3d9b; 
  margin-bottom: 30px;
  margin-top: 40px; 
}

.centered-image {
  width: 500px;
  height: auto; /* Zadržava proporcije slike */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3); /* Siva sjena dolje desno */
}

.brojUdomljenihPasa {
  font-size: 5rem;
  margin-top: -40px;
  }

  .psiGrid {
    display: grid;
    grid-template-columns: repeat(5, 1fr); 
    gap: 20px; 
    justify-content: center;
    margin-left:90px;
} 

.pasItem {
  text-align: center; 
}

.pasSlika {
  width: 100%; /* Slika će zauzeti cijeli prostor unutar svoje ćelije */
  max-width: 150px; /* Maksimalna širina slike */
  height: auto; 
  border-radius: 50%; 
}

.purpleButton {
  background-color: #d4b0f7; 
  color: white;
  padding: 5px 10px;
  text-align: center;
  border-radius: 5px;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 13px;
  
}

.purpleButton:hover {
  background-color: #7d3d9b; 
}

.greyButton {
  background-color: #959297; 
  color: white;
  padding: 5px 10px;
  text-align: center;
  border-radius: 5px;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 13px;
  margin-right: 5px;
}

.greyButton:hover {
  background-color: #777477; 
}

.pasDetaljiSlika {
  margin-top: 40px;
  margin-right:40px;
  width: 380px;   
  height: auto; 
  
}

.pasIme {
  margin-top: 5px;
  color: #7d3d9b; 
  margin-bottom: 20px;
  
}

.listaPasa {
  background-color: #959297;
  color: white;
  padding: 5px 10px;
  text-align: left;
  border-radius: 5px;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;   
  margin-top: -30px;
}

.siroko1{
  width:100%;
  background-color: #7d3d9b;
  transition: background-color 0.3s ease;
}

.siroko1:hover {
  background-color: #7d3d9b;
}

.authGumb {
  background-color: #7d3d9b;
  color: white;
  padding: 8px 16px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  margin-top: 20px;
}

.authGumb:hover {
  background-color: #632081;
}

.loginPodatci {
  color: rgb(236, 212, 247);
  line-height: 1
}

.posaljiUpit {
  background-color: #bf7cec;
  color: white;
  padding: 10px 10px 10px 10px;  
  border-radius: 5px;  
  cursor: pointer;
  font-size: 16px;   
  display: inline-block;
  width: auto;
  height: 45px;
  margin-bottom: 60px;
  text-decoration: none;
}

.posaljiUpit:hover {
  background-color: #632081;
}

